fix layout issue

--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -30,6 +30,7 @@
   opacity: 0.2;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 @keyframes shake {
